# Projet-Informatique-graphique

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: BoatAnimator.h  OrbitCamera.h  Program.h  ShaderUnit.h  TextureLoader.h  TextureUnits.h  bordsBateau.h  cylinder.h  demi_sphere.h  lighting_sphere.h  node.h  pyramid.h  shape.h  sphere.h  texture.h  textured_sphere.h  triangle.h  viewer.h  water.h
shaders/: color.frag  color.vert  color_skybox.frag  color_skybox.vert  node.frag  phong.frag  phong.vert  texture.frag  texture.vert  water.frag  water.vert  water_tess_control.glsl  water_tess_eval.glsl
src/: BoatAnimator.cpp  OrbitCamera.cpp  Program.cpp  ShaderUnit.cpp  TextureLoader.cpp  bords.cpp  cylinder.cpp  demi_sphere.cpp  lighting_sphere.cpp  main.cpp  node.cpp  pyramid.cpp  shader.cpp  shape.cpp  texture.cpp  textured_sphere.cpp  triangle.cpp  viewer.cpp  water.cpp
